# kokoro-onnx

./: constraints-py314.txt  pyproject.toml
.github/workflows/: build.yml  test.yml
